# bethurtadom

./: .gitignore  GEMINI.md  README.md  TODO.md  live_matches_dashboard.html  main.py  pyproject.toml  test.html  test_bet.py  test_winamax.py
src/core/: browser.py  logger.py  monitoring.py  settings.py
src/engine/: team_name_mappings.json  team_name_normalizer.py
src/models/: odds.py
src/scrapers/: base.py  winamax.py
src/scrapers/bet365/: __init__.py  auth.py  match_selector.js  navigation.py  next_goal_selectors.js  popups.py  scraper.py
src/scrapers/winamax/: __init__.py  auth.py  match_selector.js  navigation.py  pages.py  popups.py  scraper.py
src/ui/: dashboard.css  dashboard.js  dashboard_renderer.py  dashboard_server.py  dashboard_template.html
